[package]
name = "ws2812"
version = "1.0.1"
edition = "2021"
description = "Provide functionality to control a WS2812 multi-colour LED"
license = "GPL v3"
authors = ["Turbo Fredriksson <turbo@bayour.com>"]
repository = "https://github.com/FransUrbo/rust-libs-ws2812"
homepage = "https://github.com/FransUrbo/drive-by-wire"
categories = [
    "embedded",
    "no-std",
    "concurrency",
    "asynchronous",
]

[dependencies]
defmt = "1.0.1"
fixed = "1.23.1"
fixed-macro = "1.2"
pio = "0.3.0"
smart-leds = "0.4.0"

[dependencies.embassy-time]
features = ["defmt", "defmt-timestamp-uptime"]
version = "0.5.0"

[dependencies.embassy-rp]
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"]
version = "0.9.0"

[profile.dev]
codegen-units = 1
debug = "full"
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
strip = true
[profile.release-dev]
inherits = "release"
strip = "debuginfo"

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
